# AI-Workshop

./: .gitattributes  .gitignore  CLAUDE.md  DEPLOY.md  ORGANIZER.md  README.md  RULES.md  TEAM.md  docker-compose.yml  render.yaml
.claude/: settings.json
.claude/templates/: README.md  settings-ceo.json  settings-cib.json  settings-finance.json  settings-it.json  settings-retail.json  (+9 more)
.github/: CODEOWNERS
INBOX/: README.md  to_ceo.md  to_cib.md  to_finance.md  to_it.md  to_retail.md  to_risk.md
cases/: README.md  goal.md
ceo/: CLAUDE.md  Dockerfile  NEIGHBOR_AGENTS.md  pyproject.toml
cib/: CLAUDE.md  Dockerfile  NEIGHBOR_AGENTS.md  pyproject.toml  state.md
cib/src/: main.py
contracts/: README.md
dashboard/: Dockerfile  README.md  build_static.py  pyproject.toml  run.sh  scan.py  server.py  wait_deploy.py
docs/: apply-remaining-files.sh
finance/: CLAUDE.md  Dockerfile  NEIGHBOR_AGENTS.md  pyproject.toml
it/: CLAUDE.md  Dockerfile  NEIGHBOR_AGENTS.md  pyproject.toml
retail/: ARCHITECTURE.md  CLAUDE.md  Dockerfile  KNOWLEDGE.md  NEIGHBOR_AGENTS.md  pyproject.toml  state.md
risk/: CLAUDE.md  Dockerfile  NEIGHBOR_AGENTS.md  pyproject.toml
simulator/: Dockerfile  pyproject.toml
simulator/src/: db.py  judge.py  llm.py  main.py  probe.py  scoring.py
simulator/src/static/: index.html
simulator/tests/: test_judge.py  test_scoring.py  test_simulation.py
tasks/: task_01_credit.md  task_02_invest.md
team_a/: Dockerfile
team_b/: Dockerfile  pyproject.toml
tools/: .workshop-smoketest.txt  cowork-onboard.py  g  unstick-locks.cmd
(+37 files in other folders)
