[project]
name = "raif-cib"
version = "0.1.0"
description = "Блок cib — выездной AI-воркшоп правления Райффайзен (3 мая 2026)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic[email]>=2.7",
    "jinja2>=3.1",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src", "../"]
